objects/Kit_Locator__c.object
<CustomObject>
    <fields>
        <fullName>Discarded_Reason__c</fullName>
        <inlineHelpText>Sample Issues may include blood in the saliva, eating before giving the sample, etc.</inlineHelpText>
        <label>Discarded Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Defective Kit</fullName>
                </value>
                <value>
                    <fullName>Sample Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discarded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Discarded_Details__c</fullName>
        <description>required if the other option is selected</description>
        <inlineHelpText>Please provide details about why the test is being discarded</inlineHelpText>
        <label>Other Discarded Details</label>
        <type>TextArea</type>
    </fields>
</CustomObject>